# AudioWorkstation

./: .gitignore  AudioWorkstation.sh  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
AudioWorkstation/: __main__.py  compile.sh  metronome.py  midifile.py  pattern.py  player.py
AudioWorkstation/libs/audio/: amixer.py  fluidsynth.py  rule.py  settings.py
AudioWorkstation/libs/items/: compile.sh  setup.py  standardmidifile.py
audio/: amixer.py  fluidsynth.py  rule.py  settings.default.json  settings.json  settings.py  verifyFluidsynth.py
config/: .gitignore  Headphones.jack  MicroII.jack  S.jack  fluidsynth.default.json  gmsoundsetgroping.json  jack.json  keyboard.json  linkbuds-aac.jack  metronome.json  rule.mute_chan.json  screen.json
docs/: .buildinfo  alsa-namehint.md  audioworkstation.html  audioworkstation.keyboard.html  audioworkstation.libs.audio.html  audioworkstation.libs.sublibs.html  audioworkstation.metronome.html  audioworkstation.player.html  audioworkstation.setup.html  bluealsa-jack.md  bluealsa-plugins.md  bluealsa-pulseaudio.md  bluetooth-devices.md  genindex.html  index.html  list_soundcard.md  manual.md  objects.inv  py-modindex.html  search.html  searchindex.js  tests.html
docs/_modules/: index.html
docs/_modules/audioworkstation/: menubar.html
docs/_modules/audioworkstation/keyboard/: keyboard.html  mididriver.html
docs/_modules/audioworkstation/libs/audio/: asound.html  btaudiosink.html  fluidsynth.html
docs/_modules/audioworkstation/libs/sublibs/: csv2mid.html  parts.html
docs/_modules/audioworkstation/metronome/: metronome.html  pattern.html
docs/_modules/audioworkstation/player/: midifile.html  player.html
docs/_modules/audioworkstation/setup/: audioworkstation_settings.html  compile.html  config.html  fluidsynth_router_rule.html  fluidsynth_settings.html  jack_settings.html  middata.html
docs/source/: audioworkstation.keyboard.rst  audioworkstation.libs.audio.rst  audioworkstation.libs.sublibs.rst  audioworkstation.metronome.rst  audioworkstation.rst  audioworkstation.setup.rst  conf.py  index.rst  srcmodules.rst  tests.rst
example/: example.csv
items/: setup.py  standardmidifile.py  verifyStandardmidifile.py
kivy/: metronome.kv  metronome.py  midifile.py  pattern.py  player.kv  player.py  rule.mute_chan.json
kv/: main.py  metronome.kv
libfluidsynth/: amixer.py  fluidsynth.py  metronome.py  rule.mute_chan_0.json  rule.py  rule_mute_chan_0.json  settings.py
memorandum/: alsa-namehint.md  bluealsa-plugins.md  bluetooth-devices.md  foruse.md  make-apidoc.md
sf2/: soundfont2files.dir
sf3/: soundfont3files.dir
sphinx/source/: audioworkstation.keyboard.rst  audioworkstation.libs.audio.rst  audioworkstation.libs.sublibs.rst  audioworkstation.player.rst  audioworkstation.rst  audioworkstation.setup.rst  index.rst  tests.rst
src/audioworkstation/: __init__.py  __main__.py  compile.sh  gridlayout3.kv  gridlayout_main.kv  gridlayout_main.py  introduction.py  menubar.kv  menubar.py  metronome.kv  metronome.py  midifile.py  parts.py  pattern.py  player.kv  player.py  splashscreen.py  version.py
src/audioworkstation/keyboard/: __init__.py  keyboard.kv  keyboard.py  mididriver.py
src/audioworkstation/libs/: __init__.py
src/audioworkstation/libs/audio/: __init__.py  amixer.py  asound.py  btaudiosink.py  fluidsynth.py  fluidsynth_router_rule.py  fluidsynth_settings.py
src/audioworkstation/libs/items/: __init__.py  standardmidifile.pxd  standardmidifile.py
src/audioworkstation/libs/sublibs/: __init__.py  asound.py  btaudiosink.py  btconnect.py  csv2mid.py  paramsmid.c  paramsmid.py  parts.py  soundcard.py  standardmidifile.c  standardmidifile.py
src/audioworkstation/metronome/: __init__.py  metronome.kv  metronome.py  pattern.py
src/audioworkstation/middata/: example.csv
src/audioworkstation/player/: __init__.py  midifile.py  player.kv  player.py
src/audioworkstation/setup/: __init__.py  audioworkstation_settings.py  compile.py  config.py  fluidsynth_router_rule.py  fluidsynth_settings.py  jack_settings.py  middata.py
src/audioworkstation/temp/: actionbar.kv  actionbar.py  gridlayout1.kv  gridlayout2.kv  gridlayout_main.py  gridlayouts.py  metronome copy.kv  metronome copy.py  player copy.py
tests/: __init__.py  context.py  test_Fluidsynth.py  test_Standardmidifile.py  test_amixer.py  test_asound.py  test_fluidsynth.py  test_paramsmid.py  verifyFluidsynth.py  verifyStandardmidifile.py
