[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm", "Cython", "wheel"]

[project]
authors = [
  {name = "tomosatoP"},
  {email = "no.mail@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Cython",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Natural Language :: Japanese",
  "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
  "Cython~=0.29",
  "Kivy[base]~=2.1",
]
description = "Using a USB-MIDI Keyboard to Create an Electronic Piano"
dynamic = ["version"]
keywords = [
  "Raspberry Pi",
  "piano",
  "Kivy",
  "fluidsynth",
  "midi",
]
license = {file = "LICENSE"}
name = "AudioWorkstation"
readme = "README.md"
requires-python = "~=3.9"

[project.urls]
Homepage = "https://github.com/tomosatoP/AudioWorkstation"

[project.optional-dependencies]
dev = [
  "flake8",
  "black",
  "mypy",
  "isort",
]
# gui = ["Kivy[base]~=2.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}
data-files = []

[tool.setuptools.dynamic]
version = {attr = "audioworkstation.version.version"}

[tool.setuptools.package-data]
config = ["*.json"]
mid = []
sf2 = []
sf3 = []

[tool.cythonize]
extensions = ["src/audioworkstation/libs/sublibs/standardmidifile.py"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "python-simplified-semver"
write_to = "src/audioworkstation/version.py"

[tool.mypy]

[tool.black]

[tool.isort]

[tools.flake8]
extend-ignore = ["E203", "W503", "W504"]
max-line-length = 88
